<resources>
    <string name="app_name">FakeLogin2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign in</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="logIn">Log In</string>
    <string name="iAgree">I agree</string>
</resources>