<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".signInFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textUsernameSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColorHint="@color/colorAccent"
            app:hintTextColor="@color/colorAccent"
            app:counterTextColor="@color/colorAccent"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:background="@color/colorPrimary"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textPasswordSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:endIconMode="password_toggle"
            android:textColorHint="@color/colorAccent"
            app:hintTextColor="@color/colorAccent"
            app:counterTextColor="@color/colorAccent"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent"
                android:backgroundTint="@color/colorWhite"/>



        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnLogInSingIn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:textSize="16sp"
            app:backgroundTint="@color/colorAccent"
            app:strokeColor="@color/colorAccent"
            android:textColor="@color/colorPrimary"
            android:text="@string/logIn" />


    </LinearLayout>

</FrameLayout>